# chords

./: .gitignore  Chords.hs  LICENSE  Makefile  Parser.hs  README.md  Translation.hs  chords.cabal  chords.hs  main.hs  parser.hs  translation.hs
exe/: Main.hs
lib/: Chords.hs  Parser.hs  Surface.hs  Translation.hs
tests/: test.hs
